# shadcn-mcp

./: .gitignore  CHANGELOG.md  Makefile  README.md  SKILL.md  pyproject.toml  requirements.txt  server.py
src/shadcn_mcp/: __init__.py  server.py
