[project]
name = "shadcn-mcp"
version = "1.0.0"
description = "MCP server for the shadcn/ui v4 component registry"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eric Uehling" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.9.0",
]

[project.scripts]
shadcn-mcp = "shadcn_mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shadcn_mcp"]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
